fixing controls spacing on desktop

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -345,6 +345,7 @@ footer {
   box-shadow: 0px 30px 30px -20px var(--blacka);
   padding: 1.33em;
 }
+
 .text-line {
   color: #111;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -353,7 +354,7 @@ footer {
 .controls > * {
   width: 100%;
   margin-left: auto;
-  margin-right: auto;eader
+  margin-right: auto;
   margin-bottom: 0.75rem;
 }
 .controls div:last-child {
